Fix for bug 241068. Crash when trying to enter text in input field. [@ nsTreeBodyFrame::PrefillPropertyArray][@ _ZN15nsTreeBodyFrame20PrefillPropertyArrayEiP12nsTreeColumn]. r=neil sr=dbaron